--- a/sass/templates/_find.sass
+++ b/sass/templates/_find.sass
@@ -24,7 +24,7 @@
         border-radius: 5px
     &__button
         margin: auto
-        padding: 5px 15px
+        padding: 5px 45px
         width: 150px
         margin-top: 25px
         border: none
@@ -32,6 +32,7 @@
         border-radius: 15px
         color: $black
         cursor: pointer
+        text-decoration: none
     &__img
         width: 600px
         border: 5px solid $grey
