--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -17,3 +17,6 @@
         align-items: center
         padding-top: 20px
         padding-bottom: 20px
+    &__choice
+        background: $black
+    
