--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,3 +10,5 @@
 @import 'templates/subscribe'
 @import 'templates/footer'
 @import 'templates/choice'
+@import 'templates/choiceHouse'
+@import 'templates/booking'
