--- a/sass/templates/_find.sass
+++ b/sass/templates/_find.sass
@@ -33,6 +33,8 @@
         color: $black
         cursor: pointer
         text-decoration: none
+        &:hover
+            transform: scale(1.05)
     &__img
         width: 600px
         border: 5px solid $grey
