--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -10,5 +10,7 @@
             text-decoration: none
             color: $white
             margin-right: 55px
+            &:hover
+                color: $gold
     &__number
         color: $grey
