--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -7,10 +7,14 @@
             margin-right: 50px
             &::last-child
                 margin-right: 0
+            &:hover
+                color: $gold
     &__logo
         width: 70px
         height: 80px
         cursor: pointer
+        &:hover
+            transform: scale(1.05)
     &__block
         display: flex
         justify-content: space-between
