--- a/sass/templates/_subscribe.sass
+++ b/sass/templates/_subscribe.sass
@@ -1,5 +1,7 @@
 .subscribe
     margin-bottom: 100px
+     background: rgb(18,18,18)
+    background: linear-gradient(180deg, rgba(18,18,18,1) 0%, rgba(40,40,40,1) 50%, rgba(18,18,18,1) 100%)
     &__content
         display: flex
         justify-content: space-between
@@ -20,5 +22,6 @@
         border: none
         border-radius: 15px
         margin-left: 35px
-        
-       
+        cursor: pointer
+        &:hover
+             transform: scale(1.05)
