--- a/sass/templates/_promotion.sass
+++ b/sass/templates/_promotion.sass
@@ -27,7 +27,5 @@
         border-radius: 15px
         border: 5px solid $grey
         align-items: center
-
-
-            
-
+    &__button
+        padding: 5px 15px
