--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ html {
 
 .subscribe {
   margin-bottom: 100px;
-  margin-bottom-background: #121212;
+  background: #121212;
   background: -webkit-gradient(linear, left top, left bottom, from(#121212), color-stop(50%, #282828), to(#121212));
   background: linear-gradient(180deg, #121212 0%, #282828 50%, #121212 100%);
 }
